Update back link

--- a/templates/manage_habits.html
+++ b/templates/manage_habits.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% set current_page = 'habits' %}
 {% set page_title = 'Manage Habits' %}
-{% set back_link = {'url': '/habitstack/', 'text': '← Back to Dashboard'} %}
+{% set back_link = {'url': '/habitstack/', 'text': '←'} %}
 {% include 'navbar.html' %}
 
 <!-- Main Content -->
