--- a/templates/birthdays.html
+++ b/templates/birthdays.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% set current_page = 'birthdays' %}
 {% set page_title = 'Birthday Reminders' %}
-{% set back_link = {'url': '/habitstack/', 'text': '← Back to Dashboard'} %}
+{% set back_link = {'url': '/habitstack/', 'text': '←'} %}
 {% include 'navbar.html' %}
 
 <!-- Main Content -->
