--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% set current_page = 'watchlist' %}
 {% set page_title = 'Movies & Series' %}
-{% set back_link = {'url': '/habitstack/', 'text': '← Back to Dashboard'} %}
+{% set back_link = {'url': '/habitstack/', 'text': '←'} %}
 {% include 'navbar.html' %}
 
 <!-- Main Content -->
